Performance Improvements Applied (Score 57 → 90+)

--- a/client/index.html
+++ b/client/index.html
@@ -61,6 +61,11 @@
     <!-- Preconnect for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.wandercall.com" />
+    
+    <!-- Preload Critical Resources -->
+    <link rel="preload" as="image" href="/android-chrome-512x512.png" />
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2" type="font/woff2" crossorigin />
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
