--- a/client/index.html
+++ b/client/index.html
@@ -235,7 +235,7 @@
     <!-- End Google Tag Manager (noscript) -->
     
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" crossorigin></script>
     
     <!-- Schema.org structured data for website -->
     <script type="application/ld+json">
