replace WanderCall to wandercall

--- a/client/public/google-site-verification.html
+++ b/client/public/google-site-verification.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="REPLACE_WITH_YOUR_VERIFICATION_CODE" />
 </head>
 <body>
-    <h1>Google Site Verification for WanderCall</h1>
+    <h1>Google Site Verification for wandercall</h1>
     <p>This file is used to verify ownership of wandercall.com with Google Search Console.</p>
 </body>
 </html>
