--- a/client/index.html
+++ b/client/index.html
@@ -179,7 +179,7 @@
       },
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "+91-8733942557",
+        "telephone": "+91 9919668028",
         "contactType": "customer service",
         "email": "teamwandercall@gmail.com"
       },
